Loading images. Using url-loader for development and file-loader + name-hashing for production.

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,8 +1,11 @@
 body {
   background: orange;
+  background-image: url("./images/deadpool.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 p {
-  color: red;
+  color: greenyellow;
   transform: rotate(-90deg);
 }
