Code splitting: lazy loading.

--- a/src/main.scss
+++ b/src/main.scss
@@ -3,6 +3,7 @@ body {
   background-image: url("./images/deadpool.jpg");
   background-repeat: no-repeat;
   background-position: center;
+  color: orange;
 }
 
 p {
